[gd_scene load_steps=19 format=3 uid="uid://cngv1rgplre2c"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://Resources/Theme/wc3_theme.tres" id="1_xs0tv"]
[ext_resource type="PackedScene" uid="uid://cc70ktmpmbjts" path="res://Scenes/HUD/BottomMenuBar.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cdamkmych2jb3" path="res://Scenes/HUD/TopMenuBar.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bx03slt7u3oce" path="res://Scenes/HUD/TowersStatusCard.tscn" id="8_ts7ak"]
[ext_resource type="PackedScene" uid="uid://dj7llpr0oenw7" path="res://Scenes/HUD/ItemsStatusCard.tscn" id="9_16kcd"]
[ext_resource type="PackedScene" uid="uid://b3grhp7bp5t54" path="res://Scenes/HUD/TopLeftMenu.tscn" id="10_agdn3"]
[ext_resource type="Script" path="res://Scenes/HUD/HUD.gd" id="11"]
[ext_resource type="PackedScene" uid="uid://ino0lr2m12uh" path="res://Scenes/HUD/ItemStashMenu.tscn" id="11_5i6a2"]
[ext_resource type="PackedScene" uid="uid://dvo433axo22w3" path="res://Scenes/HUD/ElementTowersMenu.tscn" id="11_gv2lk"]
[ext_resource type="Texture2D" uid="uid://butcq5anduco8" path="res://Resources/Textures/UI/portal_lives_round_bg.tres" id="11_hbwuy"]
[ext_resource type="PackedScene" uid="uid://nl0pvhb4rasi" path="res://Scenes/HUD/ButtonTooltip.tscn" id="11_ka7k1"]
[ext_resource type="Texture2D" uid="uid://b3s3mtb8efipi" path="res://Assets/UI/HUD/darkness_face.png" id="12_2mxp4"]
[ext_resource type="PackedScene" uid="uid://csayw0jxo1omx" path="res://Scenes/HUD/UnitStatusCard.tscn" id="12_rwl1n"]
[ext_resource type="Script" path="res://Scenes/HUD/AutocastTooltipContainer.gd" id="13_fj5t7"]
[ext_resource type="Texture2D" uid="uid://mglwvt681k5r" path="res://Assets/UI/HUD/tranquility_face.png" id="13_n0pc1"]
[ext_resource type="PackedScene" uid="uid://bx5csta8pr8j0" path="res://Scenes/HUD/CombatLogWindow.tscn" id="14_g64vx"]
[ext_resource type="PackedScene" uid="uid://chojoq00uw7ng" path="res://Scenes/HUD/UnitMenu.tscn" id="15_rfxf1"]
[ext_resource type="PackedScene" uid="uid://i0b3uilwt2as" path="res://Scenes/HUD/BuildVersion.tscn" id="21_ko2ou"]


[node name="HUD" type="Control" node_paths=PackedStringArray("_error_message_container", "_normal_message_container", "_game_over_label", "_elements_tower_menu", "_item_stash_menu", "_unit_menu", "_towers_menu_card", "_items_menu_card", "_unit_status_menu_card")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_xs0tv")
script = ExtResource("11")
_error_message_container = NodePath("MarginContainer2/ErrorMessageContainer")
_normal_message_container = NodePath("MarginContainer/All/Center/CenterLeft/MarginContainer/NormalMessageContainer")
_game_over_label = NodePath("GameOverLabel")
_elements_tower_menu = NodePath("MarginContainer/All/Center/MarginContainer/HBoxContainer/ElementTowersMenu")
_item_stash_menu = NodePath("MarginContainer/All/Center/MarginContainer/HBoxContainer/ItemStashMenu")
_unit_menu = NodePath("MarginContainer/All/Center/MarginContainer/HBoxContainer/UnitMenu")
_towers_menu_card = NodePath("MarginContainer/All/Center/MenuCardsContainer/MenuCards/TowersStatusCard")
_items_menu_card = NodePath("MarginContainer/All/Center/MenuCardsContainer/MenuCards/ItemsStatusCard")
_unit_status_menu_card = NodePath("MarginContainer/All/Center/MenuCardsContainer/MenuCards/UnitStatusCard")
metadata/_edit_vertical_guides_ = [960.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="All" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Top" type="HBoxContainer" parent="MarginContainer/All"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/All/Top"]
layout_mode = 2
size_flags_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/All/Top/MarginContainer"]
layout_mode = 2
texture = ExtResource("11_hbwuy")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/All/Top/MarginContainer"]
texture_filter = 4
layout_mode = 2
texture = ExtResource("12_2mxp4")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/All/Top"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/All/Top/MarginContainer2"]
layout_mode = 2
texture = ExtResource("11_hbwuy")

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/All/Top/MarginContainer2"]
texture_filter = 4
layout_mode = 2
texture = ExtResource("13_n0pc1")
expand_mode = 1

[node name="Center" type="Control" parent="MarginContainer/All"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="CenterLeft" type="VBoxContainer" parent="MarginContainer/All/Center"]
layout_mode = 2
offset_right = 1000.0
offset_bottom = 993.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/All/Center/CenterLeft"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TopLeftMenu" parent="MarginContainer/All/Center/CenterLeft/VBoxContainer" instance=ExtResource("10_agdn3")]
layout_mode = 2

[node name="TopMenuBar" parent="MarginContainer/All/Center/CenterLeft/VBoxContainer" instance=ExtResource("6")]
visible = false
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/All/Center/CenterLeft"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 2

[node name="NormalMessageContainer" type="VBoxContainer" parent="MarginContainer/All/Center/CenterLeft/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="MenuCardsContainer" type="Panel" parent="MarginContainer/All/Center"]
custom_minimum_size = Vector2(80, 2.08165e-12)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -81.0
offset_right = -1.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2

[node name="MenuCards" type="VBoxContainer" parent="MarginContainer/All/Center/MenuCardsContainer"]
layout_mode = 1
anchors_preset = -1
offset_left = -131.0
offset_top = 66.0
offset_right = 36.0
offset_bottom = 279.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_constants/separation = 10

[node name="TowersStatusCard" parent="MarginContainer/All/Center/MenuCardsContainer/MenuCards" instance=ExtResource("8_ts7ak")]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemsStatusCard" parent="MarginContainer/All/Center/MenuCardsContainer/MenuCards" instance=ExtResource("9_16kcd")]
unique_name_in_owner = true
layout_mode = 2

[node name="UnitStatusCard" parent="MarginContainer/All/Center/MenuCardsContainer/MenuCards" instance=ExtResource("12_rwl1n")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/All/Center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_right = 110

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/All/Center/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 2

[node name="ButtonTooltip" parent="MarginContainer/All/Center/MarginContainer/HBoxContainer" instance=ExtResource("11_ka7k1")]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="UnitMenu" parent="MarginContainer/All/Center/MarginContainer/HBoxContainer" instance=ExtResource("15_rfxf1")]
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="ItemStashMenu" parent="MarginContainer/All/Center/MarginContainer/HBoxContainer" node_paths=PackedStringArray("_items_status_panel", "_oils_status_panel", "_commons_status_panel", "_uncommons_status_panel", "_rares_status_panel", "_uniques_status_panel", "_menu_card") instance=ExtResource("11_5i6a2")]
visible = false
layout_mode = 2
size_flags_vertical = 0
_items_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard/PanelContainer/HBoxContainer/VBoxContainer/ItemsCountPanel")
_oils_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard/PanelContainer/HBoxContainer/VBoxContainer/OilsCountPanel")
_commons_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard/PanelContainer/HBoxContainer/GridContainer/CommonsCountPanel")
_uncommons_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard/PanelContainer/HBoxContainer/GridContainer/UncommonsCountPanel")
_rares_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard/PanelContainer/HBoxContainer/GridContainer/RaresCountPanel")
_uniques_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard/PanelContainer/HBoxContainer/GridContainer/UniquesCountPanel")
_menu_card = NodePath("../../../MenuCardsContainer/MenuCards/ItemsStatusCard")

[node name="ElementTowersMenu" parent="MarginContainer/All/Center/MarginContainer/HBoxContainer" node_paths=PackedStringArray("_towers_status_panel", "_ice_towers_status_panel", "_nature_towers_status_panel", "_fire_towers_status_panel", "_astral_towers_status_panel", "_darkness_towers_status_panel", "_iron_towers_status_panel", "_storm_towers_status_panel", "_menu_card") instance=ExtResource("11_gv2lk")]
visible = false
layout_mode = 2
size_flags_vertical = 0
_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/VBoxContainer/TowersCountPanel2")
_ice_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/IceTowersCountPanel")
_nature_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/NatureTowersCountPanel")
_fire_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/FireTowersCountPanel")
_astral_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/AstralTowersCountPanel")
_darkness_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/DarknessTowersCountPanel")
_iron_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/IronTowersCountPanel")
_storm_towers_status_panel = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard/PanelContainer/HBoxContainer/GridContainer/StormTowersCountPanel")
_menu_card = NodePath("../../../MenuCardsContainer/MenuCards/TowersStatusCard")

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/All"]
layout_mode = 2
size_flags_vertical = 8

[node name="BottomMenuBar" parent="MarginContainer/All/Bottom" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
metadata/_edit_vertical_guides_ = []

[node name="DevControls" parent="." instance_placeholder="res://Scenes/HUD/DevControls.tscn"]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_top = 300

[node name="ErrorMessageContainer" type="VBoxContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(700, 300)
layout_mode = 2
mouse_filter = 2

[node name="FirstNodeDummy" type="Control" parent="MarginContainer2/ErrorMessageContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CombatLogWindow" parent="." instance=ExtResource("14_g64vx")]
visible = false
clip_contents = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
offset_left = 15.0
offset_top = 644.0
offset_right = 1015.0
offset_bottom = 1147.0

[node name="Minimap" parent="." instance_placeholder="res://Scenes/HUD/Minimap.tscn"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_right = 0.0
offset_left = 229.0
offset_right = 445.0
grow_horizontal = 1
mouse_filter = 2

[node name="BuildVersionLabel" parent="." instance=ExtResource("21_ko2ou")]
layout_mode = 1
offset_left = 2.0
offset_top = -20.0
offset_right = 430.0
offset_bottom = 14.0
scale = Vector2(0.55408, 0.55408)

[node name="GameOverLabel" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.5
offset_right = 250.0
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[color=RED]GAME OVER[/color]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="." node_paths=PackedStringArray("_tooltip")]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("13_fj5t7")
_tooltip = NodePath("ButtonTooltipForAutocast")

[node name="ButtonTooltipForAutocast" parent="VBoxContainer" instance=ExtResource("11_ka7k1")]
visible = false
layout_mode = 2
used_for_autocasts = true

[connection signal="main_button_toggled" from="MarginContainer/All/Center/MenuCardsContainer/MenuCards/TowersStatusCard" to="." method="_on_main_button_toggled"]
[connection signal="main_button_toggled" from="MarginContainer/All/Center/MenuCardsContainer/MenuCards/ItemsStatusCard" to="." method="_on_main_button_toggled"]
[connection signal="main_button_toggled" from="MarginContainer/All/Center/MenuCardsContainer/MenuCards/UnitStatusCard" to="." method="_on_main_button_toggled"]
[connection signal="hidden" from="MarginContainer/All/Center/MarginContainer/HBoxContainer/UnitMenu" to="." method="_on_unit_menu_hidden"]
[connection signal="hidden" from="MarginContainer/All/Center/MarginContainer/HBoxContainer/ItemStashMenu" to="." method="_on_item_stash_menu_hidden"]
[connection signal="hidden" from="MarginContainer/All/Center/MarginContainer/HBoxContainer/ElementTowersMenu" to="." method="_on_element_towers_menu_hidden"]
